[gd_scene format=3 uid="uid://df32nmuyi6lss"]

[ext_resource type="Script" uid="uid://cyq75t1s4to4i" path="res://dead.gd" id="1_4orh1"]
[ext_resource type="FontFile" uid="uid://cbnfihl2xpd8b" path="res://sprites/VT323-Regular.ttf" id="2_tnkcu"]
[ext_resource type="Shader" uid="uid://bcwqg6dauopil" path="res://gbaspawn.gdshader" id="3_tnkcu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2s5mr"]
shader = ExtResource("3_tnkcu")
shader_parameter/pixel_size = 2.0
shader_parameter/color_levels = 5.0
shader_parameter/darkness = 0.35
shader_parameter/vignette_strength = 0.45
shader_parameter/vignette_softness = 0.6
shader_parameter/scanline_strength = 0.12
shader_parameter/scanline_density = 600.0

[node name="GameOver" type="Control" unique_id=794230787]
layout_mode = 3
anchors_preset = 0
offset_right = 1154.0
offset_bottom = 648.0
script = ExtResource("1_4orh1")

[node name="ColorRect" type="ColorRect" parent="." unique_id=839055896]
material = SubResource("ShaderMaterial_2s5mr")
layout_mode = 0
offset_right = 1149.0
offset_bottom = 644.0

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1739310217]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -117.0
offset_top = -43.25
offset_right = 117.0
offset_bottom = 3.75
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer" unique_id=39298177]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_tnkcu")
theme_override_font_sizes/font_size = 56
text = "HE CAUGHT YOU"

[node name="restart" type="Button" parent="VBoxContainer" unique_id=1867212304]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tnkcu")
theme_override_font_sizes/font_size = 32
text = "RESTART"

[node name="main menu" type="Button" parent="VBoxContainer" unique_id=681438209]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tnkcu")
theme_override_font_sizes/font_size = 32
text = "MAIN MENU"

[node name="quit" type="Button" parent="VBoxContainer" unique_id=2042028352]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tnkcu")
theme_override_font_sizes/font_size = 32
text = "QUIT..."

[connection signal="pressed" from="VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/main menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
